small fix for gigantic horizontal scroll on firefox

--- a/mootiro_komoo/static/css/partials/_global.less
+++ b/mootiro_komoo/static/css/partials/_global.less
@@ -5,6 +5,7 @@ body {
     font-size: @font-size;
     font-family: @sans;
     background-color: @content-bg;
+    overflow: hidden;
 }
 
 h1 { .h1-font; }
